# corvus

./: CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  PKGBUILD  README.md  suggestions.md
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/corvus/: Cargo.toml
crates/corvus-core/: Cargo.toml
crates/corvus-core/src/: app_state.rs  app_state.rs.backup2  clipboard.rs  lib.rs  plugin.rs  search.rs  session.rs  settings.rs  task_manager.rs
crates/corvus-core/tests/: test_app_state.rs
crates/corvus/src/: main.rs
crates/io/: Cargo.toml
crates/io/src/: fs_ops.rs  fs_ops.rs.backup  lib.rs
crates/plugin-ipc/: Cargo.toml
crates/plugin-ipc/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: layout.rs  left_pane.rs  lib.rs  middle_pane.rs  right_pane.rs  settings.rs  top_bar.rs  tui.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  icons.rs  lib.rs
test-plugins/my-plugin/: plugin.toml
