[package]
name = "corvus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
io = { path = "../io" }
directories = { workspace = true }
config = { path = "../config" }
proc-mounts = { workspace = true, optional = true }
plugin-ipc = { path = "../plugin-ipc" }
fs_extra = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
humansize = { workspace = true }
users = "0.11.0"
utils = { path = "../utils" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ratatui = { workspace = true }
toml = { workspace = true }
portable-pty = "0.9.0"

[dev-dependencies]
tempdir = { workspace = true }
tokio = { workspace = true }

[features]
mounts = ["dep:proc-mounts"]
