[package]
name = "corvus"
version = "0.1.0"
edition = "2021"

[dependencies]
corvus-core = { path = "../corvus-core", features = ["mounts"] }
ui = { path = "../ui", features = ["mounts"] }
io = { path = "../io" }
config = { path = "../config" }
utils = { path = "../utils" }

tokio = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = "1.0"
futures = "0.3"
log = { workspace = true }
fern = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
directories = { workspace = true }
portable-pty = "0.9.0"
